--- a/Day06_html.html
+++ b/Day06_html.html
@@ -1,15 +1,29 @@
 <!DOCTYPE html>
+
 <html>
 
 <head>
     <title>Page Title</title>
+
 </head>
 
 <body>
 
     <h1>My First Heading</h1>
-    <p>My first paragraph.</p>
+    <p></div>My first paragraph.</p>
+    <br /> 
+    <div style="color:blue;">div 태그를 밥먹듯이 써요</div>
+    <div>
+        <a href= "https://www.w3schools.com">W3Schools.com</a>
+    <img src="https://www.w3schools.com/images/w3schools_green.jpg"></div>
+          <span> </span>
+ <div>
+        <video width="320" height="240" controls>
+            <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+            브라우저가 video 태그를 지원하지 않습니다.
+        </video>
 
-</body>
+    
+        </body>
 
 </html>
